PatronManager/main/default/objects/City__c/fields/Max_temp__c.field-meta.xml
<CustomField>
    <fullName>Max_temp__c</fullName>
    <label>Max temp</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>