PatronManager/main/default/objects/City__c/fields/Min_temp__c.field-meta.xml
<CustomField>
    <fullName>Min_temp__c</fullName>
    <label>Min temp</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>