PatronManager/main/default/objects/City__c/fields/Predictability__c.field-meta.xml
<CustomField>
    <fullName>Predictability__c</fullName>
    <label>Predictability</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>