PatronManager/main/default/objects/City__c/fields/The_temp__c.field-meta.xml
<CustomField>
    <fullName>The_temp__c</fullName>
    <label>The temp</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>