PatronManager/main/default/objects/City__c/fields/Weather_state_name__c.field-meta.xml
<CustomField>
    <fullName>Weather_state_name__c</fullName>
    <label>Weather state name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>