PatronManager/main/default/objects/City__c/fields/woeid__c.field-meta.xml
<CustomField>
    <fullName>woeid__c</fullName>
    <label>WhereInTheWorldId</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>